# pscpp

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  SOLUTIONS.md  pscpp.py  setup.bat  setup.sh
.claude/: settings.local.json
.githooks/: post-checkout
.github/workflows/: test.yml
BOJ/1000/: README.md  main.cpp
BOJ/1012/: README.md  expected.txt  input.txt  main.cpp
BOJ/10830/: README.md  info.json  main.cpp
BOJ/11279/: README.md  expected.txt  input.txt  main.cpp
BOJ/11659/: README.md  main.cpp
BOJ/11724/: README.md  expected.txt  info.json  input.txt  main.cpp
BOJ/11726/: README.md  expected.txt  input.txt  main.cpp
BOJ/11727/: README.md  expected.txt  input.txt  main.cpp
BOJ/11942/: README.md  info.json  main.cpp
BOJ/14626/: README.md  expected.txt  input.txt  main.cpp
BOJ/14940/: README.md  main.cpp
BOJ/15963/: README.md  expected.txt  input.txt  main.cpp
BOJ/16135/: README.md  info.json
BOJ/1620/: README.md  main.cpp
BOJ/17219/: README.md  main.cpp
BOJ/18870/: README.md
BOJ/1927/: README.md  expected.txt  input.txt  main.cpp
BOJ/19532/: README.md  info.json  main.cpp
BOJ/21736/: README.md  info.json  main.cpp
BOJ/25372/: README.md  info.json  main.cpp
BOJ/26711/: README.md  input.txt  (+2 more)
bits/: stdc++.h
extension/: manifest.json  popup.html  popup.js
native-host/: com.pscpp.host.json  install.bat  install.py  install.sh  pscpp_host.bat  pscpp_host.py
notes/: algorithms.md
scripts/: build.bat  build.sh  new_prob.bat  new_prob.sh  submit.bat  submit.sh  test.bat  test.sh
templates/: template.md
(+27 files in other folders)
